--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,3 +5,5 @@
   <p><%= project.description %></p>
   <p><%= project.user.email %></p>
 <% end %>
+
+<%= link_to "new project", new_project_path %>
