--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @project.title %></h1>
 
 <% @posts.each do |post| %>
-  <p><%= link_to post.title, project_post_path(@project, post) %></p>
+  <p><%= link_to post.title, post_path(post) %></p>
 <% end %>
 
 <%= link_to "new post", new_project_post_path(@project) %>
