delete for project, post and comment

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,4 +3,4 @@
   <%= f.button :submit %>
 <% end %>
 
-<%= link_to "back to project", project_path(@project) %>
+<%= link_to "Back to project", project_path(@project) %>
