--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -6,4 +6,4 @@
   <p><%= project.user.email %></p>
 <% end %>
 
-<%= link_to "new project", new_project_path %>
+<%= link_to "New project", new_project_path %>
