--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -4,4 +4,4 @@
   <%= f.button :submit %>
 <% end %>
 
-<%= link_to "back to projects", projects_path %>
+<%= link_to "Back to projects", projects_path %>
