--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,6 +2,7 @@
 
   <h1><%= @project.title %></h1>
   <p><%= @project.description %></p>
+  <h2>Posts</h2>
   <div class="post-cards">
     <% @posts.each do |post| %>
       <%= link_to post_path(post) do %>
