--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,7 @@
 <div class="container">
-  <%= simple_form_for [@project, @post] do |f| %>
+  <%= simple_form_for [@project, @post], html: { multipart: true } do |f| %>
     <%= f.input :title %>
-    <%= f.input :media, as: :file %>
-    <%= f.input :media, as: :file %>
-    <%= f.input :media, as: :file %>
+    <%= f.input :media, as: :file, input_html: { multiple: true } %>
     <%= f.button :submit %>
   <% end %>
 
