--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,24 @@
 <div class="container">
 
+  <%= link_to "Back to projects", projects_path %>
+
   <h1><%= @project.title %></h1>
   <p><%= @project.description %></p>
+
+  <% if @project.user == current_user %>
+    <%= simple_form_for @project do |f| %>
+      <%= f.input :title %>
+      <%= f.input :description %>
+      <%= f.button :submit %>
+    <% end %>
+    <%= link_to "Delete Project", project_path(@project),
+      data: {
+        turbo_method: :delete,
+        turbo_confirm: "Delete this project and all associated posts and comments?"
+      }
+    %>
+  <% end %>
+
   <h2>Posts</h2>
   <div class="post-cards">
     <% @posts.each do |post| %>
@@ -17,12 +34,4 @@
     </div>
   </div>
 
-  <%= link_to "Delete Project", project_path(@project),
-    data: {
-      turbo_method: :delete,
-      turbo_confirm: "Delete this project and all associated posts and comments?"
-    }
-  %>
-
-  <%= link_to "Back to projects", projects_path %>
 </div>
